# Platform-GC

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a3f91c2d8e47_offer_banners.py  bd16388e453a_initial_schema.py  c4e82fa19b73_push_token.py  d5a91b7c3e48_print_jobs.py
app/: config.py  database.py  deps.py  jobs.py  main.py  models.py  redis.py  schemas.py
app/routers/: admin.py  auth.py  coins.py  coupons.py  offers.py  print.py  transactions.py
app/services/: auth.py  campaigns.py  coins.py  notifications.py  print.py  push.py  transactions.py
app/templates/: messages.py
app/utils/: security.py
docs/: platform-gc.postman_collection.json  platform-gc.postman_environment.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/orders/: page.tsx
src/app/admin/products/: page.tsx
src/app/api/login/: route.ts
src/app/api/orders/: route.ts
src/app/api/products/: route.ts
src/app/login/: page.tsx
src/app/pos/: page.tsx
tests/: conftest.py  test_admin.py  test_auth.py  test_campaigns.py  test_coins.py  test_notifications.py  test_print.py  test_transactions.py
