[project]
name = "platform-gc"
version = "0.1.0"
description = "Customer engagement & rewards platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "redis[hiredis]>=5.0.4",
    "apscheduler>=3.10.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "twilio>=9.0.0",
    "phonenumbers>=8.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "fakeredis>=2.23.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
